# PitchPerfectImage

./: .env  .gitignore  README.md  logger_config.py  main.py  pyproject.toml
data/: Hindi Pitch Videos for Image extraction+enhancement.xlsx
examples/: prompt_sample.py  sample.py
src/: downloader.py  parser.py  processor.py
src/config/: logger_config.py
src/file/: file_utils.py
src/image/: image_enhancer.py
src/llm/: processor.py  vit.py
src/parsers/: parser.py
src/utils/: downloader.py  load_env.py
